[package]
name = "controlboard"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = "0.3.8"
defmt-rtt = { version = "0.4.1" }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
gpio = { version = "0.4.1"}
panic-probe = "0.3.2"
cortex-m-rt = "0.7.3"